--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+
+[env:gateway]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 framework = arduino
+lib_deps = 
+  bblanchon/ArduinoJson@^7.3.1
+  https://github.com/timmbogner/Farm-Data-Relay-System@2.0.1
+  Wifi
+  ; U8g2
+
+board = esp32dev
+build_flags = -I/include/include/fdrs_gateway_config
+monitor_speed = 115200
+com = COM5
+
