--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,4 @@
 ; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 
 [env:gateway]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
@@ -19,7 +10,6 @@ lib_deps =
   ; U8g2
 
 board = esp32dev
-build_flags = -I/include/include/fdrs_gateway_config
+build_flags = -I/include
 monitor_speed = 115200
-com = COM5
-
+upload_port = COM5
