#define ESPNOWG_ACT    sendSerial(); sendESPNowPeers(); HR 2025-03-13 NK

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,5 @@ lib_deps =
   ; U8g2
 
 board = esp32dev
-build_flags = -I/include
+build_flags = -Iinclude
 monitor_speed = 115200
-upload_port = COM5
