--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ lib_deps =
   https://github.com/timmbogner/Farm-Data-Relay-System@2.0.1
   Wifi
   ; U8g2
-
+; upload_port = COM3
 board = esp32dev
 build_flags = -Iinclude
 monitor_speed = 115200
